# transcribe_youtube_video

./: .gitignore  Cargo.toml  README.md
src/: main.rs
