[package]
name = "speech_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-openai = "0.12.1"
tokio = { version = "1.29.1", features = ["full"] }
youtube_dl = { version = "0.8.1", features = ["tokio", "downloader"] }
